# cli-python-starter

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
app/: main.py
tests/: test_main.py
